<resources>
    <string name="app_name">IMD Market</string>
    <string name="Header_app_name">IMDMARKET</string>
    <string name="Login_user">Usuário</string>
    <string name="Login_password">Senha</string>
    <string name="Login_userLabel">Usuário:</string>
    <string name="Login_passwordLabel">Senha:</string>
    <string name="Login_loginButton">Entrar</string>
    <string name="Login_successfulLogin">Login bem sucedido</string>
    <string name="Login_badLogin">Usuário ou senha incorretos</string>
    <string name="Login_missLogin">Campos de senha ou login estão vazios.</string>
    <string name="Login_changePassword"><u>Esqueci minha senha/login</u></string>
    <string name="Login_changePasswordSucess">Senha trocada com sucesso. Tente login novamente</string>
    <string name="Login_changePasswordReset">Login e Senha definidos para o padrão. Tente o login novamente.</string>


    <string name="Menu_questionTextView">Bem-vindo! O que deseja fazer?</string>
    <string name="Menu_buttonCreate">Cadastrar produto</string>
    <string name="Menu_buttonRead">Listar produto</string>
    <string name="Menu_buttonUpdate">Alterar produto</string>
    <string name="Menu_buttonDelete">Deletar produto</string>

    <string name="Cadastro_codeLabel">Código:</string>
    <string name="Cadastro_nameLabel">Nome:</string>
    <string name="Cadastro_descriptionLabel">Descrição:</string>
    <string name="Cadastro_quantityLabel">Quantidade:</string>
    <string name="Cadastro_code">Código</string>
    <string name="Cadastro_name">Nome</string>
    <string name="Cadastro_description">Descrição</string>
    <string name="Cadastro_quantity">Quantidade</string>
    <string name="Cadastro_buttonCreate">Cadastrar</string>

    <string name="Delete_ButtonDeleteText">Deletar</string>
    <string name="Delete_CodeLabelText">Código</string>
    <string name="Delete_MissCode">Preencha o campo com o código do produto.</string>
    <string name="Delete_DeleteSucess">Produto deletado com sucesso.</string>
    <string name="Delete_ProductNotFound">Produto não encontrado.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="List_ButtonReturn">Voltar</string>

    <string name="ProductDetail_Name">Nome:</string>
    <string name="ProductDetail_PageTitle">Detalhes de produto</string>
    <string name="ProductDetail_Code">Código:</string>
    <string name="ProductDetail_Desc">Descrição:</string>
    <string name="ProductDetail_Quantity">Quantidade em estoque:</string>
    <string name="ProductDetail_NameLoading">Nome carregando...</string>
    <string name="ProductDetail_CodeLoading">Código carregando...</string>
    <string name="ProductDetail_DescLoading">Descrição carregando...</string>
    <string name="ProductDetail_QuantityLoading">Quantidade carregando...</string>
    <string name="ProductDetail_ButtonReturn">Voltar</string>

    <string name="Edicao_buttonCreate">Atualizar</string>
    <string name="Edicao_MissCode">Preencha o campo com o código do produto.</string>
    <string name="Edicao_ProductNotFound">Produto não encontrado.</string>
    <string name="Edicao_UpdateSucess">Produto atualizado com sucesso.</string>
    <string name="Edicao_UpdateError">Erro ao atualizar produto.</string>




</resources>