<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProductDetail_QuantityTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailProductActivity">

    <TextView
        android:id="@+id/Header_app_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="0sp"
        android:layout_weight="1"
        android:background="@color/aspargus"
        android:gravity="center"
        android:text="@string/Header_app_name"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="160dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="471dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="338dp" />

    <TextView
        android:id="@+id/ProductDetail_Name"
        android:layout_width="156dp"
        android:layout_height="0dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="36dp"
        android:text="@string/ProductDetail_NameLoading"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ProductDetail_DescTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/ProductDetail_Code"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginEnd="56dp"
        android:text="@string/ProductDetail_CodeLoading"
        android:textAlignment="textEnd"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ProductDetail_Name"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/ProductDetail_CodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:text="@string/ProductDetail_Code"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ProductDetail_DescTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/ProductDetail_Desc"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/ProductDetail_Quantity"
        android:textColor="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/ProductDetail_NameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/ProductDetail_Name"
        android:textColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ProductDetail_PageTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header_app_name" />

    <TextView
        android:id="@+id/ProductDetail_Desc"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="28dp"
        android:text="@string/ProductDetail_DescLoading"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProductDetail_DescTitle" />

    <TextView
        android:id="@+id/ProductDetail_Quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/ProductDetail_QuantityLoading"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/ProdDetail_buttonReturn"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="54dp"
        android:text="@string/ProductDetail_ButtonReturn"
        android:textSize="24sp"
        app:backgroundTint="@color/sage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>