<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MenuActivity">

    <TextView
        android:id="@+id/Header_app_name"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="0sp"
        android:layout_weight="1"
        android:background="@color/aspargus"
        android:gravity="center"
        android:text="@string/Header_app_name"
        android:textAlignment="gravity"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/MenuLayout"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Header_app_name">

        <TextView
            android:id="@+id/MenuTextView"
            android:layout_width="351dp"
            android:layout_height="39dp"
            android:layout_marginBottom="38dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/Menu_questionTextView"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/Menu_buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/Menu_buttonCreate"
            android:textSize="18sp"
            app:backgroundTint="@color/sage" />

        <Button
            android:id="@+id/Menu_buttonRead"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/Menu_buttonRead"
            android:textSize="18sp"
            app:backgroundTint="@color/sage" />

        <Button
            android:id="@+id/Menu_buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="24dp"
            android:text="@string/Menu_buttonDelete"
            android:textSize="18sp"
            app:backgroundTint="@color/sage" />

        <Button
            android:id="@+id/Menu_buttonUpdate"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/Menu_buttonUpdate"
            android:textSize="18sp"
            app:backgroundTint="@color/sage" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>